update book detail scene and modify admin ui