@@ -15,14 +15,10 @@ repositories {
 
 dependencies {
     implementation("org.openjfx:javafx-controls:22.0.2") //JavaFX version, adjust if needed
-    implementation("org.openjfx:javafx-web:17")
     implementation("org.openjfx:javafx-fxml:22.0.2")    // using FXML
-    implementation("com.google.code.gson:gson:2.10.1")  //add Gson dependency
-    implementation "org.openjfx:javafx-graphics:22.0.2"
-    //implementation("mysql:mysql-connector-java:8.0.33") //add sql connector
-    implementation("mysql:mysql-connector-java:8.4.2") //add sql connector
+    implementation ("org.openjfx:javafx-web:22.0.2")
 
-    implementation "org.openjfx:javafx-swing:22.0.2"
+    implementation("mysql:mysql-connector-java:8.0.33") //add sql connector
 
     implementation("com.squareup.okhttp3:okhttp:4.10.0") //updated OkHttp dependency
     implementation("com.google.code.gson:gson:2.10.1") //Gson dependency
@@ -34,12 +30,17 @@ dependencies {
 
 javafx {
     version = "22.0.2"
-    modules = listOf("javafx.controls", "javafx.fxml", "javafx.web")
+    modules = listOf("javafx.controls", "javafx.fxml", "javafx.web", "javafx.graphics")
 }
 
 application {
-    mainClass.set("com.library.LibraryManagementApplication")
+    mainClass.set("com.library.controller.AppController")
+    applicationDefaultJvmArgs = listOf(
+        "--add-modules=javafx.controls,javafx.fxml,javafx.web,javafx.graphics"
+    )
+
 }
+
 
 tasks.test {
     useJUnitPlatform()
